--- a/styles/globals.css
+++ b/styles/globals.css
@@ -116,6 +116,8 @@ p {
   font-weight: 500;
   font-family: var(--main-font-family);
   font-size: var(--font-size);
+  text-align: justify;      
+  /* text-align-last: justify;  */
 }
 p:last-child {
   margin-bottom: 0;
