--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1097,6 +1097,8 @@ Services Area CSS
   margin-bottom: 25px;
   position: relative;
   transition: var(--transition);
+  width: 300px;
+  
 }
 .services-item .services-image {
   overflow: hidden;
