--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7507,3 +7507,7 @@ Buy Now Btn
   background-color: var(--main-color);
   color: #fff;
 }/*# sourceMappingURL=globals.css.map */
+
+/* TeamContent */
+.readmoreshow { }
+
