--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7509,5 +7509,5 @@ Buy Now Btn
 }/*# sourceMappingURL=globals.css.map */
 
 /* TeamContent */
-.readmoreshow { }
+.article-services-content h4 { color: #000; margin-top: 30px;}
 
